--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url: https://joshbenoit.dev/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: https://jbenoit1.github.io/jbenoit1.github.io"/jbenoit1.github.io"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
